# InferSuite

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.service  HANDOFF.md  README.md  deploy.sh  docker-compose.yml  measure.sh  pyproject.toml  requirements.txt  setup.sh
GPU_benchmark/: .gitignore  Dockerfile  README.md  analyze.py  config.json  llm_client.py  prepare_prompts.py  prom_scraper.py  prompts.py  run_sweeps.py
agentic/: .gitignore  phantom_cpu_figure.py  thesis_figures.py
deploy/: config.env.example  eks-cluster-config.yaml
docs/: AGENTS_HANDOVER.md  workload_conformance_review.md
h100/: README.md
inf_thesis_plots/: make_figures.py
local_agents/: README.md  thesis_block_local_loop.tex.hold
local_service/: README.md
plots/: README.md
results/: README.md
scripts/: analyze_stability.py  bootstrap_host_ubuntu.sh  build_push_fastapi.sh  chat_cli.py  create_eks_cluster.sh  deploy_fullstack_single_node.k3s.sh  deploy_fullstack_single_node.sh  deploy_llmd_eks.sh  deploy_llmd_local.k3s.sh  deploy_llmd_local.sh  download_models.sh  download_sample_docs.sh  draw_agent_pipeline.py  generate_report.py  harden_isolation.sh  ingest_ragbench_to_milvus.py  ingest_tenant_to_milvus.py  make_results_tree.sh  overlay_service_fences.py  pause_eks.sh  perf_smoke_test.sh  plot_extra_timing.py  prepare_fastapi_runtime_assets.sh  prepare_queries.py  provision_model_artifacts.sh  pull_required_images.sh  query_runner.py  required_images.txt  results_cli.py  resume_eks.sh  run_benchmark.sh  run_nsys.sh  run_stability_experiment.sh  run_tma_extra.sh  (+3 more)
(+6569 files in other folders)
