[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-service-kernel"
version = "0.1.0"
description = "FastAPI LLM service kernel with llm-d, RAG, and semantic cache"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
  "pymilvus>=2.4,<3.0",
  "pymongo>=4.6,<5.0",
  "sentence-transformers>=3.0,<4.0",
  "transformers>=4.41,<5.0",
  "numpy>=1.26,<3.0",
  "boto3>=1.34,<2.0",
  "botocore>=1.34,<2.0",
  "PyJWT[crypto]>=2.8,<3.0",
  "cryptography>=42,<46",
  "pypdf>=5,<7",
  "rich>=13,<15",
  "plotext>=5,<6",
  "datasets>=2.19,<4.0",
  "requests>=2.31,<3.0",
  "tqdm>=4.66,<5.0",
  "opentelemetry-sdk>=1.20,<2.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.41b0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
